--- a/Roommate/Locale/File/vi.lproj/Localizable.strings
+++ b/Roommate/Locale/File/vi.lproj/Localizable.strings
@@ -5,9 +5,38 @@
   Created by TrinhHC on 9/21/18.
   Copyright © 2018 TrinhHC. All rights reserved.
 */
-"KEY"="Vietnamese";
+//MARK: Roommate cell
 "ROMMATE_RIGHT_PRICE"="Mức giá";
 "ROMMATE_RIGHT_POSITION"="Vị trí tìm kiếm";
 "ROMMATE_RIGHT_CITY"="Thành Phố";
+
+//MARK: Segment control
 "SEGMENTED_CONTROL_ROOM"="Phòng ở ghép";
 "SEGMENTED_CONTROL_ROOMMATE"="Người ở ghép";
+
+//MARK: Room cell
+"NUMBER_OF_PERSON"="Tìm ở ghép %d %@";
+"PRICE_OF_ROOM"="%d VND/%@";
+"PERSON"="Người";
+
+
+//MARK: Utilies
+"FEMALE"="Nữ";
+"MALE"="Nam";
+"cctv"="Camera an ninh";
+"24-hours"="Giờ giấc tự do";
+"aircondition"="Máy lạnh";
+"closet"="Tủ quần áo";
+"cooking"="Cho nấu ăn";
+"fan"="Quạt";
+"bed"="Giường ngủ";
+"internet"="Mạng internet";
+"key"="Không chung chủ";
+"parking"="Chỗ đậu xe";
+"policeman"="Bảo vệ";
+"refrigerator"="Tủ lạnh";
+"television"="Tivi";
+"toilet"="WC riêng";
+"washing-machine"="Máy giặt";
+"water-heater"="Máy nước nóng";
+
