[TRINHHC] [TRINHHC] Fix bug and refactoring model, Edit api connection helper

--- a/Roommate/Locale/File/en.lproj/InfoPlist.strings
+++ b/Roommate/Locale/File/en.lproj/InfoPlist.strings
@@ -5,5 +5,5 @@
   Created by TrinhHC on 10/30/18.
   Copyright © 2018 TrinhHC. All rights reserved.
 */
-NSPhotoLibraryUsageDescription="$(PRODUCT_NAME) want to use photo";
-NSCameraUsageDescription="$(PRODUCT_NAME) want to user camera";
+NSPhotoLibraryUsageDescription="Roommate want to use photo";
+NSCameraUsageDescription="Roommate want to user camera";
