--- a/Roommate/Locale/File/vi.lproj/Localizable.strings
+++ b/Roommate/Locale/File/vi.lproj/Localizable.strings
@@ -11,12 +11,20 @@
 "CREATE_ROOMMATE_POST"="Đăng tìm phòng";
 
 "CREATE_ROOM_POST"="Đăng tìm ở ghép";
+"CREATE"="Đăng ngay";
 "EDIT_POST"="Sửa bài viết";
 "ALL_VC"="Tất cả";
 "BOOKMARK_VC"="Đánh dấu";
 "SIGN_IN_TITLE" = "Đăng nhập";
+"TITLE_CHANGE_PASSWORD" = "Đổi mật khẩu";
 "SIGN_UP_AS_ROOMOWNER_TITLE" = "Đăng ký làm chủ nhà";
 "SIGN_UP_AS_MEMBER_TITLE" = "Đăng ký thành viên";
+"TITLE_FORGOT_PASSWORD" = "Quên mật khẩu";
+"TITLE_SEND_EMAIL" = "Gửi email";
+"TITLE_GET_PASSWORD" = "Lấy lại mật khẩu";
+"ERROR_NON_EXIST_USER_WITH_EMAIL" = "Không có tài khoản nào liên kết với địa chỉ email này";
+"TITLE_GET_PASSWORD_SUCCESS" = "Lấy lại mật khẩu thành công vui lòng kiểm tra email";
+"TITLE_FORGOT_PASSWORD_DESCRIPTION" = "Vui lòng nhập địa chỉ email chúng tôi sẽ gửi mật khẩu mới vào email liên kết với tài khoản ";
 "HOME_VC" = "Trang chủ";
 "NOTIFICATION_VC" = "Thông báo";
 "ACCOUNT_VC" = "Tài khoản";
@@ -31,20 +39,30 @@
 "TITLE_HISTORY_MEMBER_ROOM" = "Phòng bạn đã ở";
 "TITLE_MEMBER_CREATED_ROOM_POST" = "Bài viết tìm bạn đã tạo";
 "TITLE_MEMBER_CREATED_ROOMMATE_POST" = "Bài viết tìm phòng đã tạo";
+"TITLE_USER_RATE" = "Đánh giá về bạn";
 "CURRENT_NUMBER_OF_PERSON" = "Số người hiện tại:%d/%d";
 "NO_OWNER_ROOM"="Bạn chưa tạo phòng nào";
 "TITLE_MEMBER_NO_HISTORY_ROOM"="Bạn chưa ở phòng nào";
 "NO_MEMBER_ROOM"="Phòng chưa thêm thành viên nào";
 "TITLE_USER_DETAIL"="Thông tin của bạn";
 "TITLE_MEMBER_NO_CURRENT_ROOM" = "Bạn không có phòng hiện tại";
+"ERROR_LOAD_CURRENT_ROOM" = "Không thể tải thông tin phòng hiện tại của bạn, Chạm để thử lại";
+"ERROR_LOAD_CURRENT_ROOM_NON_EXIST" = "Không thể tạo bài đăng khi bạn không ở phòng nào";
+"ERROR_LOAD_ROOM_OF_POST_NON_EXIST" = "Không tìm thấy thông tin phòng của bài đăng.";
+"ERROR_LOAD_USER" = "Không thể tải thông tin người dùng";
+"LOAD_CURRENT_ROOM" = "Đang tải thông tin phòng";
+"LOAD_USER_INFO" = "Đang tải thông tin người dùng";
+"LOAD_REMOVE_ROOM" = "Đang xoá phòng";
 
 //MARK: SettingVC
 "TITLE_SIGN_OUT" = "Đăng xuất";
+"TITLE_SIGN_UP" = "Đăng ký";
 "HEADER_ACCOUNT" = "Tài khoản của tôi";
 "HEADER_LANGUAGE" = "Cài đặt ngôn ngữ";
 "HEADER_OTHER" = "Khác";
 "SUGGEST_SETTING"="Cài đặt gợi ý"; 
 "PROFILE_SETTING"="Thông tin tài khoản";
+"PROFILE_USER"="Thông tin người dùng";
 "LANGUGE_SETTING"="Ngôn ngữ";
 "ABOUT_US_SETTING"="Về chúng tôi";
 "PRIVACY_SETTING"="Quy định";
@@ -150,6 +168,8 @@
 "SELECT_IMAGE"="Chọn ảnh";
 "SEARCH_RESULT"="Kết quả tìm kiếm";
 "SEARCH_NEARBY"="Địa điểm gần đó";
+"TITLE_CHANGE_PASSWORD_SUCCESS" = "Đổi mật khẩu thành công";
+"ERROR_OLD_PASSWORD" = "Mật khẩu cũ không đúng";
 
 "NO_DATA"="Không có dữ liệu";
 "NO_MORE_DATA"="Không có thêm dữ liệu";
@@ -157,8 +177,11 @@
 "BACK"="Quay lại";
 "BASE_INFORMATION"="Thông tin cơ bản";
 "UTILITY_TITLE"="Tiện ích";
+"UTILITY_TITLE_REQUIRED"="(Vui lòng chọn ít nhất 5)";
 "UTILITY_INFOR_TITLE"="Thông tin tiện ích";
 "DESCRIPTION"="Mô Tả";
+"DESCRIPTION_EMPTY"="Không có mô tả";
+
 "GENDER"="Giới Tính";
 "ADDRESS"="Địa chỉ : %@";
 "AREA"="Diện tích : %d m2";
@@ -175,7 +198,8 @@
 "NEXT_STEP" = "Tiếp tục";
 "SAVE" = "Lưu";
 "APPLY" = "Áp dụng";
-"SELECT" = "Lựa chọn";
+"SELECT" = "Vui lòng lựa chọn";
+"SELECT_NORMAL" = "Lựa chọn";
 "CITY" = "Tỉnh,Thành phố";
 "DISTRICT" = "Quận,Huyện";
 "PRICE" = "Giá";
@@ -212,17 +236,31 @@
 "PLACE_HOLDER_USERNAME"="Tên đăng nhập";
 "PLACE_HOLDER_PASSWORD"="Mật khẩu";
 "PLACE_HOLDER_REPEAT_PASSWORD"="Nhập lại mật khẩu";
+"PLACE_HOLDER_OLD_PASSWORD"="Mật khẩu cũ";
+"PLACE_HOLDER_NEW_PASSWORD"="Mật khẩu mới";
+
+
+
+
+"PLACE_HOLDER_FULL_NAME_VALUE"="Tên đầy đủ của bạn : %@";
+"PLACE_HOLDER_DOB_VALUE"="Ngày sinh : %@";
+"PLACE_HOLDER_PHONE_NUMBER_VALUE"="Số điện thoại : %@";
+"PLACE_HOLDER_EMAIL_VALUE"="Địa chỉ email : %@";
+"PLACE_HOLDER_USERNAME_VALUE"="Tên đăng nhập : %@";
+"PLACE_HOLDER_GENDER_VALUE"="Giới tính : %@";
 
 //MARK: CERoomPostVC
 "ROOM_POST_INFOR_TITLE"="Thông tin bài biết";
 "ROOM_POST_NAME"="Tên bài viết";
 "ROOM_BASE_INFORMATION"="Thông tin phòng hiện tại của bạn";
+"ROOM_BASE_INFORMATION_FOR_POST"="Thông tin phòng";
+
 "VIEW_DETAIL" = "Xem chi tiết";
 
 
 //MARK: CERoommatePostVC
 "ROOM_POST_SETTING_TITLE"="Thông tin bài viết (Thông tin này sẽ được cập nhập cho cài đặt gợi ý)";
-"ROOM_POST_PHONE_CONTACT"="Thông tin liên hệ";
+"ROOM_POST_PHONE_CONTACT"="Thông tin liên hệ (*)";
 "POST_CREATE_SUCCESS"="Tạo bài viết thành công";
 "POST_EDIT_SUCCESS"="Sửa bài viết thành công";
 "POST_REMOVE_SUCCESS"="Xoá bài viết thành công";
@@ -232,6 +270,8 @@
 //MARK: CERoomVC
 "ROOM_CREATE"="Tạo phòng";
 "EDIT_MEMBER_VC"="Sửa thông tin thành viên";
+"EDIT_USER_INFO"="Sửa thông tin";
+"EDIT_USER_INFO_SUCCESS"="Sửa thông tin thành công";
 "ROOM_EDIT"="Sửa thông tin phòng";
 "ROOM_INFOR_TITLE"="Thông tin phòng";
 "ROOM_NAME_TITLE"="Tên Phòng";
@@ -282,7 +322,6 @@
 "EDIT_MEMBER_ROOM_MASTER"="Chọn người quản lý phòng";
 
 
-
 //MARK: Network
 "NETWORK_STATUS_TITLE"="Thông báo";
 "NETWORK_STATUS_CONNECTED_ERROR_MESSAGE"="Không thể kết nối mạng, vui lòng kiểm tra lại";
@@ -301,7 +340,6 @@
 "ALERT_INVALID_MEMBER"="Thành viên này đang ở 1 phòng khác hoặc đang là chủ nhà";
 "ALERT_EXISTED_ROOM_MEMBER"="Thành viên đã tồn tại trong phòng";
 "PLACE_HOLDER_USERNAME"="Tên đăng nhập";
-"PLACE_HOLDER_PASSWORD"="Mật khẩu";
 
 
 
@@ -314,6 +352,7 @@
 "MB_LOAD_EDIT_POST" = "Đang cập nhập bài viết";
 
 "MB_LOAD_CREATE_USER" ="Đang Đăng ký";
+"MB_LOAD_SAVE" ="Đang lưu";
 "MB_LOAD_EDIT_ROOM" = "Đang cập nhập thông tin phòng";
 
 "SEARCH_LOADING"="Đang tìm kiếm...";
@@ -337,13 +376,31 @@
 //MARK: RateVC
 "RATE_ROOM"="Đánh giá phòng";
 "RATE_MEMBER"="Đánh giá thành viên";
+"RATE_ROOM_DETAIL"="Đánh giá của những người từng ở đây";
+"RATE_MEMBER_DETAIL"="Đánh giá của chủ nhà";
+"RATE_AVG"="Điểm trung bình";
+"RATE_ALL"="Tất cả đánh giá";
+
 "RATE_ROOM_SECURITY"="An ninh";
 "RATE_ROOM_LOCATION"="Vị trí";
 "RATE_ROOM_UTILITY"="Tiện ích";
+"RATE_ROOM_SECURITY_VALUE"="An ninh : %.01f";
+"RATE_ROOM_LOCATION_VALUE"="Vị trí : %.01f";
+"RATE_ROOM_UTILITY_VALUE"="Tiện ích : %.01f";
+"RATE"="Đánh giá";
+"RATE_EMPTY"="Chưa có đánh giá nào";
+
 
 "RATE_MEMBER_BEHAVIOR"="Hành vi";
 "RATE_MEMBER_LIFESTYLE"="Lối sống";
 "RATE_MEMBER_PAYMENT"="Chi trả";
+"RATE_MEMBER_BEHAVIOR_VALUE"="Hành vi : %.01f";
+"RATE_MEMBER_LIFESTYLE_VALUE"="Lối sống : %.01f";
+"RATE_MEMBER_PAYMENT_VALUE"="Chi trả : %.01f";
+"RATE_COMMENT"="Bình luận";
+"RATE_REQUIRED"="Yêu cầu chọn";
+"ERROR_TYPE_COMMENT"="Bình luận từ 6 - 50 ký tự";
+"RATE_SAVE_SUCCESS"="Lưu đánh giá thành công";
 
 //MARK: NotificationVC
 "ROOM_MASTER"="Quản lý";
